FIX: Firefox alignment bug for inline buttons

--- a/assets/sass/2_fragments/_actions.scss
+++ b/assets/sass/2_fragments/_actions.scss
@@ -23,15 +23,12 @@
       > button,
       > .custom-fieldset {
          display: inline-block;
+         vertical-align: top;
          margin: $sm-spacing $tiny-spacing $sm-spacing 0;
 
          &:last-child {
             margin-right: 0;
          }
-      }
-
-      > .custom-fieldset.init {
-         margin-top: 0;
       }
    }
 }
