--- a/assets/sass/3_modules/_page-header.scss
+++ b/assets/sass/3_modules/_page-header.scss
@@ -57,21 +57,19 @@
    }
 
    .page-permissions {
-      margin-bottom: 0;
 
       @include media($small) {
          @include float(left);
          @include span-columns(6);
-         margin-top: $sm-spacing;
       }
 
       .meta-data {
-         margin: 6px 0;
+         margin: 16px 0;
       }
 
       .custom-select {
-         margin-top: $tiny-spacing;
-         margin-bottom: 0;
+         margin: $sm-spacing $tiny-spacing;
+         margin-left: 0;
       }
    }
 
